--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,5 @@ iwyu_build/
 # fuzzer logs
 fuzz-*.log
 
-# bazel module files (MODULE.bazel will need to be removed here)
-MODULE.bazel
+# bazel module files
 MODULE.bazel.lock
